Added video in background and used fles to make things appear over video

--- a/public/index.html
+++ b/public/index.html
@@ -12,16 +12,19 @@
 </head>
 
 <body>
-  <div class="text">
-    <h1 class="heading1">WEATHER CHECK</h1>
-    <form class="text-input" action="/" method="post" autocomplete="off">
-      <label for="cityInput" class="city">City Name 👇</label>
-      <br />
-      <input id="cityInput" type="text" name="city">
-      <br />
-      <button type="submit" class="btn-check">CHECK</button>
-    </form>
-  </div>
+    <video class="my-video" autoplay muted loop>
+      <source src="video/Waves2.mp4" type="video/mp4">
+    </video>
+    <div class="text">
+      <h1 class="heading1">WEATHER CHECK</h1>
+      <form class="text-input" action="/" method="post" autocomplete="off">
+        <label for="cityInput" class="city">City Name 👇</label>
+        <br />
+        <input id="cityInput" type="text" name="city">
+        <br />
+        <button type="submit" class="btn-check">CHECK</button>
+      </form>
+    </div>
   <footer>
     <p>
       Developed with ♥ @Himanshu
